RESOLVED FIXED 53643
When XSSFilter blocks JavaScript URLs, use a safe JavaScript URL instead of the empty string
https://bugs.webkit.org/show_bug.cgi?id=53643
Summary When XSSFilter blocks JavaScript URLs, use a safe JavaScript URL instead of t...
Adam Barth
Reported 2011-02-02 16:52:46 PST
When XSSFilter blocks JavaScript URLs, use a safe JavaScript URL instead of the empty string
Attachments
Patch (2.39 KB, patch)
2011-02-02 16:53 PST, Adam Barth
no flags
Adam Barth
Comment 1 2011-02-02 16:53:57 PST
WebKit Commit Bot
Comment 2 2011-02-02 20:23:19 PST
Comment on attachment 81006 [details] Patch Clearing flags on attachment: 81006 Committed r77462: <http://trac.webkit.org/changeset/77462>
WebKit Commit Bot
Comment 3 2011-02-02 20:23:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.