2011-02-02  Adam Barth  <abarth@webkit.org>

Reviewed by Daniel Bates.

        When XSSFilter blocks JavaScript URLs, use a safe JavaScript URL
        instead of the empty string
        https://bugs.webkit.org/show_bug.cgi?id=53643

        In a URL context, the empty string completes to the URL of the current
        page, which causes these tests to go into an infinite loop.  Instead,
        we should use a "safe" JavaScript URL that does nothing.

        Fixes:
            http/tests/security/xssAuditor/javascript-link*

        * html/parser/XSSFilter.cpp:
        (WebCore::XSSFilter::eraseDangerousAttributesIfInjected):

Canonical link: https://commits.webkit.org/67545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77462 268f45cc-cd09-0410-ab3c-d52691b4dbfc